--- a/packages/editable/src/rich-editable/rich-editable.css
+++ b/packages/editable/src/rich-editable/rich-editable.css
@@ -21,7 +21,7 @@ div[contenteditable='true'] {
     font-size: 80%;
     padding: 0.2em 0.4em;
     background-color: rgba(120, 120, 120, 0.15);
-    color: darkgray;
+    color: rgba(160, 30, 40, 0.9);
     border-radius: 2px;
   }
 
